# jndcrash

./: .gitignore  .gitmodules  CMakeLists.txt  build.gradle  lib-proguard-rules.txt
src/main/java/ru/ivanarh/jndcrash/: NDCrash.java  NDCrashService.java
src/main/jni/: jndcrash.c
